# Quadtree-hs

./: README.md  quadtree.cabal
app/: Main.hs  Point.hs  Shape.hs  Tree.hs
