cabal-version:      2.4
name:               quadtree
version:            0.1.0
author:             Fay Carsons
maintainer:         faycarsons23@gmail.com
executable quadtree
    main-is:          Main.hs
    other-modules:    Tree, Point, Shape  
    build-depends:    base >=4.16.4.0, random >=1.2.1.1, cairo >=0.13.10.0, mtl >= 2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N -optl-L/usr/lib -optl-liconv 
    tested-with: GHB == 9.8.2
    extra-libraries:  iconv

